...
                  Spacer(),
                  TextButton(
                    onPressed: () {
                      _showFillUpDialog(context, notifier, inventory);
                    },
                    child: Text(
                      'fill-up >',
                      style: TextStyle(color: Colors.grey),
                    ),
                  ),
                ],
              ),
              SizedBox(height: 20),
...
                    newPillCount = (pillsLeft - pillsChange).clamp(0, pillsLeft);
                  }
                  notifier.updateMedicineQuantity(inventory, newPillCount);
                  setState(() {}); // Refresh UI
                  Navigator.of(dialogContext).pop();
                },
                child: Text('Update'),
              ),
            ],
          );
        }
      );
    },
...
